chore: apply pre-commit formatting fixes

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,11 @@
-# Example environment variables
-APP_ENV=dev
-LOG_LEVEL=info
+# Пример файла переменных окружения
+# Скопируйте этот файл в .env и заполните реальными значениями
+# НЕ КОММИТЬТЕ .env файл в репозиторий!
+
+# Окружение (development, production)
+ENVIRONMENT=development
+
+# Примеры секретов (замените на реальные значения)
+# DATABASE_URL=postgresql://user:password@localhost/dbname
+# API_KEY=your_api_key_here
+# SECRET_TOKEN=your_secret_token_here
