P06: Реализация Secure Coding контролей и MVP
- Реализованы 3 контроля secure coding
- Реализован MVP функционал (аутентификация, CRUD, роли)
- Добавлены тесты (31 новый тест)
- Безопасность: Argon2id, JWT, валидация входных данных

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
 fastapi==0.112.2
 uvicorn==0.30.5
 python-multipart==0.0.9
+python-jose[cryptography]==3.3.0
+passlib[argon2]==1.7.4
+python-dateutil==2.9.0
