--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,7 @@
 name: CI
 on:
-  pull_request:
   push:
-    branches: [main]
+  pull_request:
 permissions:
   contents: read
 concurrency:
@@ -10,50 +9,52 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  lint-test:
+    strategy:
+      matrix:
+        python-version: [ '3.10', '3.11', '3.12' ]
+        os: [ ubuntu-latest, macos-latest ]
+    runs-on: ${{ matrix.os }}
+    timeout-minutes: 15
     steps:
       - uses: actions/checkout@v4
-
       - uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
-          cache: "pip"
-
+          python-version: ${{ matrix.python-version }}
+          cache: 'pip'
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt -r requirements-dev.txt
-
       - name: Lint & Format
         run: |
           ruff check --output-format=github .
           black --check .
           isort --check-only .
-
-      - name: Tests
-        run: pytest -q
-
-      - name: Pre-commit (all files)
-        run: pre-commit run --all-files
+      - name: Pytest
+        run: |
+          pytest -q --junitxml=reports/junit.xml --cov=app --cov-report=xml:reports/coverage.xml
+        continue-on-error: false
+      - uses: actions/upload-artifact@v4
+        with:
+          name: reports-python${{ matrix.python-version }}-${{ matrix.os }}
+          path: reports/
+          if-no-files-found: ignore
 
   docker:
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     steps:
       - uses: actions/checkout@v4
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-
       - name: Lint Dockerfile with Hadolint
         uses: hadolint/hadolint-action@v3.1.0
         with:
           dockerfile: Dockerfile
           failure-threshold: warning
-
       - name: Build Docker image
         run: docker build -t secdev-app:test .
-
       - name: Scan image with Trivy
         uses: aquasecurity/trivy-action@master
         with:
@@ -61,13 +62,11 @@ jobs:
           format: 'sarif'
           output: 'trivy-results.sarif'
           severity: 'CRITICAL,HIGH'
-
       - name: Upload Trivy results to GitHub Security
         uses: github/codeql-action/upload-sarif@v3
         if: always()
         with:
           sarif_file: 'trivy-results.sarif'
-
       - name: Check non-root user
         run: |
           USER_ID=$(docker run --rm secdev-app:test id -u)
@@ -76,7 +75,6 @@ jobs:
             exit 1
           fi
           echo "✓ Container runs as non-root user (UID: $USER_ID)"
-
       - name: Check healthcheck
         run: |
           docker run -d --name test-container -p 8000:8000 secdev-app:test
