--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,18 +9,13 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  lint-test:
-    strategy:
-      matrix:
-        python-version: [ '3.10', '3.11', '3.12' ]
-        os: [ ubuntu-latest, macos-latest ]
-    runs-on: ${{ matrix.os }}
-    timeout-minutes: 15
+  build:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: '3.11'
           cache: 'pip'
       - name: Install dependencies
         run: |
@@ -31,61 +26,5 @@ jobs:
           ruff check --output-format=github .
           black --check .
           isort --check-only .
-      - name: Pytest
-        run: |
-          pytest -q --junitxml=reports/junit.xml --cov=app --cov-report=xml:reports/coverage.xml
-        continue-on-error: false
-      - uses: actions/upload-artifact@v4
-        with:
-          name: reports-python${{ matrix.python-version }}-${{ matrix.os }}
-          path: reports/
-          if-no-files-found: ignore
-
-  docker:
-    runs-on: ubuntu-latest
-    timeout-minutes: 15
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Lint Dockerfile with Hadolint
-        uses: hadolint/hadolint-action@v3.1.0
-        with:
-          dockerfile: Dockerfile
-          failure-threshold: warning
-      - name: Build Docker image
-        run: docker build -t secdev-app:test .
-      - name: Scan image with Trivy
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: secdev-app:test
-          format: 'sarif'
-          output: 'trivy-results.sarif'
-          severity: 'CRITICAL,HIGH'
-      - name: Show files after Trivy
-        run: ls -la
-      - name: Upload Trivy results to GitHub Security
-        uses: github/codeql-action/upload-sarif@v4
-        if: ${{ hashFiles('trivy-results.sarif') != '' }}
-        with:
-          sarif_file: 'trivy-results.sarif'
-      - name: Check non-root user
-        run: |
-          USER_ID=$(docker run --rm secdev-app:test id -u)
-          if [ "$USER_ID" = "0" ]; then
-            echo "ERROR: Container runs as root (UID 0)"
-            exit 1
-          fi
-          echo "✓ Container runs as non-root user (UID: $USER_ID)"
-      - name: Check healthcheck
-        run: |
-          docker run -d --name test-container -p 8000:8000 secdev-app:test
-          sleep 10
-          HEALTH=$(docker inspect --format='{{.State.Health.Status}}' test-container)
-          if [ "$HEALTH" != "healthy" ]; then
-            echo "WARNING: Container health status: $HEALTH"
-          else
-            echo "✓ Container is healthy"
-          fi
-          docker stop test-container
-          docker rm test-container
+      - name: Tests
+        run: pytest -q
