--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,6 +1,7 @@
-pytest==8.2.2
-httpx==0.27.2
-ruff==0.6.9
-black==24.8.0
-isort==7.0.0
-pre-commit==3.8.0
+pytest>=7.4.0
+pytest-cov>=4.1.0
+pytest-asyncio>=0.21.0
+ruff>=0.1.0
+black>=23.0.0
+isort>=5.12.0
+httpx>=0.24.0
