fix: pass commit SHA via environment variable instead of command line
- Remove github.sha after EOF (was causing 'command not found' error)
- Use environment variable COMMIT_SHA instead of sys.argv
- Change heredoc from 'EOF' to EOF to allow variable substitution
- Fix Python script to read commit SHA from os.environ

--- a/.github/workflows/ci-sast-secrets.yml
+++ b/.github/workflows/ci-sast-secrets.yml
@@ -88,9 +88,11 @@ jobs:
       - name: Generate SAST Summary
         run: |
           if [ -f "EVIDENCE/P10/semgrep.sarif" ]; then
-            python3 << 'EOF'
+            COMMIT_SHA="${{ github.sha }}"
+            python3 << EOF
           import json
           import sys
+          import os
           from datetime import datetime
           
           try:
@@ -121,11 +123,12 @@ jobs:
                           findings_by_rule[rule_id] = 0
                       findings_by_rule[rule_id] += 1
               
+              commit_sha = os.environ.get("COMMIT_SHA", "N/A")
               summary = f"""# SAST & Secrets Scan Summary
           
           Generated: {datetime.now().isoformat()}
           Workflow: Security - SAST & Secrets
-          Commit: {sys.argv[1] if len(sys.argv) > 1 else "N/A"}
+          Commit: {commit_sha}
           
           ## Semgrep SAST Results
           
@@ -178,7 +181,6 @@ jobs:
                   out.write(f"# SAST & Secrets Scan Summary\n\nError generating summary: {e}\n")
               sys.exit(1)
           EOF
-          ${{ github.sha }}
           else
               echo "# SAST & Secrets Scan Summary" > EVIDENCE/P10/sast_summary.md
               echo "" >> EVIDENCE/P10/sast_summary.md
