--- a/.github/workflows/ci-p11-dast.yml
+++ b/.github/workflows/ci-p11-dast.yml
@@ -49,7 +49,19 @@ jobs:
         run: |
           # Create empty .env file if it doesn't exist (docker-compose.yml references it)
           touch .env || true
-          docker compose -f docker-compose.yml up -d --build
+          # Create a temporary docker-compose override for CI
+          # Remove read_only constraint and add tmpfs for uploads
+          cat > docker-compose.ci.yml << 'EOF'
+          version: '3.8'
+          services:
+            app:
+              read_only: false
+              tmpfs:
+                - /tmp
+                - /var/tmp
+                - /app/uploads
+          EOF
+          docker compose -f docker-compose.yml -f docker-compose.ci.yml up -d --build
           echo "Waiting for application to be ready..."
           timeout=60
           elapsed=0
