fix: remove duplicate flags and search for correct report names
- Remove duplicate -J, -r, -w flags from cmd_options (Action adds them automatically)
- Search for report_json.json, report_html.html (Action's default names)
- Rename them to zap_baseline.* for consistency

--- a/.github/workflows/ci-p11-dast.yml
+++ b/.github/workflows/ci-p11-dast.yml
@@ -135,8 +135,7 @@ jobs:
         uses: zaproxy/action-baseline@v0.12.0
         with:
           target: ${{ steps.app_url.outputs.TARGET_URL }}
-          rules_file_name: '.zap/rules.tsv'
-          cmd_options: '-a -J -r zap_baseline.json -w zap_baseline.html -I -j'
+          cmd_options: '-a -I -j'
           fail_action: false
           artifact_name: 'zap-reports'
 
@@ -144,35 +143,36 @@ jobs:
         run: |
           mkdir -p EVIDENCE/P11
           echo "=== Searching for ZAP reports ==="
-          find . -name "zap_baseline.json" -o -name "zap_baseline.html" 2>/dev/null | head -10
+          # Action creates reports with these names: report_json.json, report_html.html, report_md.md
+          find . -name "report_*.json" -o -name "report_*.html" -o -name "report_*.md" 2>/dev/null | head -10
           echo ""
           echo "=== Checking common locations ==="
-          ls -la zap_baseline.* 2>/dev/null || echo "No zap_baseline.* in root"
+          ls -la report_*.* 2>/dev/null || echo "No report_*.* in root"
           ls -la .zap/ 2>/dev/null || echo "No .zap/ directory"
           ls -la reports/ 2>/dev/null || echo "No reports/ directory"
           echo ""
           echo "=== Copying reports ==="
-          # Try multiple possible locations
-          if [ -f "zap_baseline.json" ]; then
-            cp zap_baseline.json EVIDENCE/P11/ && echo "✓ Copied JSON from root"
-          elif [ -f ".zap/zap_baseline.json" ]; then
-            cp .zap/zap_baseline.json EVIDENCE/P11/zap_baseline.json && echo "✓ Copied JSON from .zap/"
-          elif [ -f "reports/zap_baseline.json" ]; then
-            cp reports/zap_baseline.json EVIDENCE/P11/zap_baseline.json && echo "✓ Copied JSON from reports/"
+          # Action creates: report_json.json, report_html.html, report_md.md
+          if [ -f "report_json.json" ]; then
+            cp report_json.json EVIDENCE/P11/zap_baseline.json && echo "✓ Copied JSON report"
+          elif [ -f ".zap/report_json.json" ]; then
+            cp .zap/report_json.json EVIDENCE/P11/zap_baseline.json && echo "✓ Copied JSON from .zap/"
           else
-            echo "✗ JSON report not found in any location"
+            echo "✗ JSON report not found"
             find . -name "*.json" -type f 2>/dev/null | head -5
           fi
           
-          if [ -f "zap_baseline.html" ]; then
-            cp zap_baseline.html EVIDENCE/P11/ && echo "✓ Copied HTML from root"
-          elif [ -f ".zap/zap_baseline.html" ]; then
-            cp .zap/zap_baseline.html EVIDENCE/P11/zap_baseline.html && echo "✓ Copied HTML from .zap/"
-          elif [ -f "reports/zap_baseline.html" ]; then
-            cp reports/zap_baseline.html EVIDENCE/P11/zap_baseline.html && echo "✓ Copied HTML from reports/"
+          if [ -f "report_html.html" ]; then
+            cp report_html.html EVIDENCE/P11/zap_baseline.html && echo "✓ Copied HTML report"
+          elif [ -f ".zap/report_html.html" ]; then
+            cp .zap/report_html.html EVIDENCE/P11/zap_baseline.html && echo "✓ Copied HTML from .zap/"
           else
-            echo "✗ HTML report not found in any location"
+            echo "✗ HTML report not found"
             find . -name "*.html" -type f 2>/dev/null | head -5
+          fi
+          
+          if [ -f "report_md.md" ]; then
+            cp report_md.md EVIDENCE/P11/zap_baseline.md && echo "✓ Copied MD report"
           fi
           
           echo ""
